detekt bugs part 1

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -41,7 +41,7 @@
     </fragment>
     <fragment
         android:id="@+id/similarFragment"
-        android:name="ru.practicum.android.diploma.detail.presentation.similar.SimilarFragment"
+        android:name="ru.practicum.android.diploma.detail.presentation.semilar.SimilarFragment"
         android:label="fragment_similar"
         tools:layout="@layout/fragment_similar" >
         <action
